syntax = "proto3";

package pb;

// msgSign = RSA(nodeId + userId + timestamp)

message ConnectCommand {
    string nodeId = 1;
    string userId = 2;
    uint64 timestamp = 3;
    string msgSign = 4;
}


message DisconnectCommand {
    string nodeId = 1;
    string userId = 2;
    uint64 timestamp = 3;
    string msgSign = 4;
}

message UserTempConnectCommand {
    string NodeID = 1;
    string DAppID = 2;
    string TopicID = 3;
    uint64 SignatureTimestamp = 4;
    string DAppSignature = 5;
}

message UserTempConnectResp {
    string NodeID = 1;
    string DAppID = 2;
    string TopicID = 3;
    int32 statusCode = 4; // 200 success      400 failure
    string statusMsg = 5; // success / invalid request
    uint64 Timestamp = 6;
}
